crates/flowscope-core/tests/snapshots/completion_snapshots__snap_keywords_where_clause.snap
---
source: crates/flowscope-core/tests/completion_snapshots.rs
expression: result
---
{
  "clause": "where",
  "shouldShow": false,
  "items": []
}
